Extra clean up code